--- a/client/src/elements/schema-editor/schema-editor-array.html
+++ b/client/src/elements/schema-editor/schema-editor-array.html
@@ -2,17 +2,31 @@
   <require from="./schema-editor-wrapper"></require>
   <require from="./schema-editor-array.css"></require>
   <require from="../molecules/delete-button.html"></require>
-  
-  <div if.bind="data" repeat.for="entry of data" class="schema-editor-array__entry">    
-    <schema-editor-wrapper
-        schema.bind="$parent.schema.items"
-        data.two-way="data[$index]"
-        change.bind="$parent.change">
-    </schema-editor-wrapper>
-    <div class="schema-editor-array__entry-actions">
-      <button-secondary if.bind="!$first" icon="up" click.delegate="moveElementUp(data, $index)"></button-secondary>
-      <button-secondary if.bind="!$last" icon="down" click.delegate="moveElementDown(data, $index)"></button-secondary>
-      <delete-button action.call="deleteElement(data, $index)"></delete-button>
+  <div if.bind="data" repeat.for="entry of data" class="schema-editor-array__entry">
+    <div class="schema-editor-array__collapsecontrol" if.bind="options.expandable">
+      <button-secondary icon="expand" size="small" if.bind="collapsedStates[$index] !== 'expanded'" click.delegate="expand($index)"></button-secondary>
+      <button-secondary icon="collapse" size="small" if.bind="collapsedStates[$index] === 'expanded'" click.delegate="collapse($index)"></button-secondary>
+      
+      <span class="q-text">${options.expandable.itemLabelProperty ? entry[options.expandable.itemLabelProperty] : $index + 1}</span>
+      
+      <div class="schema-editor-array__entry-actions">
+        <button-secondary if.bind="!$first" icon="up" click.delegate="moveElementUp(data, $index)" size="small"></button-secondary>
+        <button-secondary if.bind="!$last" icon="down" click.delegate="moveElementDown(data, $index)" size="small"></button-secondary>
+        <delete-button action.call="deleteElement(data, $index)" size="small"></delete-button>
+      </div>
+    </div>
+    <div>
+      <schema-editor-wrapper
+          if.bind="collapsedStates[$index] === 'expanded' || !options.expandable"
+          schema.bind="$parent.schema.items"
+          data.two-way="data[$index]"
+          change.bind="$parent.change">
+      </schema-editor-wrapper>
+    </div>
+    <div class="schema-editor-array__entry-actions" if.bind="!options.expandable">
+      <button-secondary if.bind="!$first" icon="up" click.delegate="moveElementUp(data, $index)" size="small"></button-secondary>
+      <button-secondary if.bind="!$last" icon="down" click.delegate="moveElementDown(data, $index)" size="small"></button-secondary>
+      <delete-button action.call="deleteElement(data, $index)" size="small"></delete-button>
     </div>
   </div>
   
