implements step option for number type in schema editor

--- a/client/src/elements/schema-editor/schema-editor-number.html
+++ b/client/src/elements/schema-editor/schema-editor-number.html
@@ -1,6 +1,6 @@
 <template class="schema-editor-input" >
   <label>
     ${schema["Q:label"] ? schema["Q:label"] : schema["title"]}
-    <input type="number" required.bind="required" value.bind="data" keyup.delegate="handleChange() & debounce:800">
+    <input type="number" required.bind="required" value.bind="data" step.bind="options.step" keyup.delegate="handleChange() & debounce:800">
   <label>
 </template>
