--- a/client/src/elements/schema-editor/schema-editor-boolean.html
+++ b/client/src/elements/schema-editor/schema-editor-boolean.html
@@ -2,7 +2,7 @@
   <div class="q-form__checkbox">
     <label>
       <input type="checkbox" checked.bind="data" change.delegate="change()">
-      <span>${schema["Q:label"] ? schema["Q:label"] : schema["title"]}</span>
+      <span>${schema["title"]}</span>
     </label>
   </div>
 </template>
