--- a/client/src/elements/schema-editor/schema-editor-object.html
+++ b/client/src/elements/schema-editor/schema-editor-object.html
@@ -3,7 +3,7 @@
 
     <div if.bind="schema.properties" repeat.for="propertyName of schema.properties | keys">
 
-      <fieldset if.bind="getType($parent.schema.properties[propertyName]) === 'object' || getType($parent.schema.properties[propertyName]) === 'array'">
+      <fieldset if.bind="getType($parent.schema.properties[propertyName]) === 'object' || getType($parent.schema.properties[propertyName]) === 'array'" class="${isCompact($parent.schema.properties[propertyName]) ? 'compact' : ''}">
         <legend>
           ${$parent.schema.properties[propertyName]['title']}
         </legend>
