--- a/client/src/pages/index.html
+++ b/client/src/pages/index.html
@@ -31,5 +31,6 @@
       <div class="q-text-small">&nbsp;= ${'general.itemNotActivated' | t}</div>
     </div>
     <p class="index__statistics q-text-small q-text--light" if.bind="!enoughNewItems" t="statistics.tooFewNewGraphics" t-params.bind="statsValues"></p>
+    <p class="index__statistics q-text-small q-text--light" if.bind="enoughNewItems" t="statistics.enoughNewGraphics" t-params.bind="statsValues"></p>
   </main>
 </template>
