--- a/client/src/elements/organisms/tool-selection.html
+++ b/client/src/elements/organisms/tool-selection.html
@@ -2,6 +2,7 @@
   <require from="./tool-selection.css"></require>
   <a repeat.for="tool of tools" route-href="route: editor; params.bind: {tool: tool.name}">
     <button-primary
+      tabindex="-1"
       size="big"
       code.bind=tool.icon
     ></button-primary>
