--- a/client/src/elements/atoms/button-yes.html
+++ b/client/src/elements/atoms/button-yes.html
@@ -1,4 +1,4 @@
-<template bindable="icon, code, size, iconSize">
+<template bindable="icon, code, size, iconSize, tabindex">
   <require from="./button-yes.css"></require>
-  <icon-button icon.bind="icon" code.bind="code" size.bind="size" icon-size.bind="iconSize"><slot></slot></icon-button>
+  <icon-button icon.bind="icon" code.bind="code" size.bind="size" icon-size.bind="iconSize" tabindex.bind="tabindex"><slot></slot></icon-button>
 </template>
