--- a/client/src/dialogs/confirm-dialog.html
+++ b/client/src/dialogs/confirm-dialog.html
@@ -5,8 +5,8 @@
       <h1 class="q-dialog-title">${config.confirmQuestion}</h1>
     </div>
     <aside class="q-dialog__controls">
-      <button-yes click.delegate="controller.ok()">Ja</button-yes>
-      <button-no click.delegate="controller.cancel()">Nein</button-yes>
+      <button-yes click.delegate="controller.ok()">${'general.yes' & t}</button-yes>
+      <button-no click.delegate="controller.cancel()">${'general.no' & t}</button-yes>
     </aside>
   </div>
 </template>
