fixes bugs in schema-editor-lat-lng, lazy loads leaflet and geocoder-mapzen dependencies on usage

--- a/client/src/elements/organisms/tool-selection.html
+++ b/client/src/elements/organisms/tool-selection.html
@@ -6,6 +6,6 @@
       size="big"
       code.bind=tool.icon
     ></button-primary>
-    ${tool.label}
+    <span class="q-text-small q-text--light">${tool.label}</span>
   </a>
 </template>
