--- a/client/src/elements/molecules/delete-button.html
+++ b/client/src/elements/molecules/delete-button.html
@@ -1,4 +1,4 @@
-<template bindable="action, size" style="display: block;">
+<template bindable="action, size, buttonType" style="display: block;">
   <require from="./confirm-button"></require>
-  <confirm-button icon="delete" action.bind="action" size.bind="size"></confirm-button>
+  <confirm-button icon="delete" action.bind="action" size.bind="size" button-type.bind="buttonType"></confirm-button>
 </template>
