--- a/client/src/elements/molecules/item-list-entry.html
+++ b/client/src/elements/molecules/item-list-entry.html
@@ -12,5 +12,6 @@
     if.bind="user.roles.includes('poweruser')"
     size="small"
     action.call="deleteItem()"
+    button-type="secondary"
   ></delete-button>
 </template>
