improves several design/style details

--- a/client/src/dialogs/account-dialog.html
+++ b/client/src/dialogs/account-dialog.html
@@ -29,7 +29,7 @@
         icon="logout"><span t="general.logout"></span></button-primary>
       <button-secondary
         click.trigger="controller.cancel()"
-        icon="close"><span t="general.close"></span></button-secondary>
+        icon="leave"><span t="general.close"></span></button-secondary>
     </aside>
   </div>
 </template>
