--- a/client/src/dialogs/help-dialog.html
+++ b/client/src/dialogs/help-dialog.html
@@ -15,7 +15,7 @@
       </section>
     </div>
     <aside class="q-dialog__controls">
-      <button-secondary click.delegate="controller.cancel()" icon="close"><span t="general.close"></span></button-secondary>
+      <button-secondary click.delegate="controller.cancel()" icon="leave"><span t="general.close"></span></button-secondary>
     </aside>
   </div>
 </template>
