--- a/client/src/dialogs/item-dialog.html
+++ b/client/src/dialogs/item-dialog.html
@@ -6,19 +6,19 @@
       <item-preview if.bind="item.id" id.bind="item.id" on-drag.bind="handleDrag" target.two-way="currentTarget"></item-preview>
     </div>
     <aside class="q-dialog__controls">
-      <div class="q-text-small">
+      <div class="q-text-small q-text--light">
         <icon-active-state is-active.bind="item.conf.active"></icon-active-state>
         <span>${ 'general.created' & t } ${ item.conf.createdDate & timeAgo:7*24*60*60 }<br>
         ${ 'general.by' & t } ${item.conf.createdBy}</span>
       </div>
 
-      <button-primary if.bind="config.allowActivate && !item.conf.active" click.delegate="activateItem()" icon="activate">
+      <button-secondary if.bind="config.allowActivate && !item.conf.active" click.delegate="activateItem()" icon="activate">
         <span t="item.activate"></span>
-      </button-primary>
+      </button-secondary>
 
-      <button-primary if.bind="config.allowActivate && item.conf.active" click.delegate="deactivateItem()" icon="deactivate">
+      <button-secondary if.bind="config.allowActivate && item.conf.active" click.delegate="deactivateItem()" icon="deactivate">
         <span t="item.deactivate"></span>
-      </button-primary>
+      </button-secondary>
 
       <embed-code item.bind="item" target.bind="currentTarget"></embed-code>
 
@@ -27,7 +27,7 @@
         <pre><code class="q-text-small q-text--light">${item.conf._id}</code></pre>
       </div>
 
-      <button-secondary click.delegate="controller.cancel()" icon="close"><span t="general.close"></span></button-secondary>
+      <button-secondary click.delegate="controller.cancel()" icon="leave"><span t="general.close"></span></button-secondary>
     </aside>
   </div>
 </template>
