--- a/client/src/icons/icon-collapse.html
+++ b/client/src/icons/icon-collapse.html
@@ -1,3 +1,3 @@
 <template>
-  <span>-</span>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 12"><path d="M0 5v2h12V5z"></svg>
 </template>
