--- a/client/src/icons/icon-expand.html
+++ b/client/src/icons/icon-expand.html
@@ -1,3 +1,3 @@
 <template>
-  <span>+</span>
+  <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M7 5V0H5v5H0v2h5v5h2V7h5V5z"></svg>
 </template>
