improve item list and search styles

--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -5,7 +5,7 @@
       overflow-x: auto;
     }
   </style>
-  <div class="container">
+  <div class="container" css="width: ${width}px;">
     <div css="width: ${width}px;">
       <div ref="previewElement"></div>
     </div>
