--- a/client/src/elements/molecules/item-list-entry.html
+++ b/client/src/elements/molecules/item-list-entry.html
@@ -4,9 +4,9 @@
   <box-icon if.bind="iconSvg" code.bind="iconSvg" class="tool-icon"></box-icon>
   
   <span class="q-text-small">${item.conf.title}</span>
-  <span class="q-text-small" if.bind="item.conf.updatedDate">${item.conf.updatedDate & timeAgo:7*24*60*60}</span>
-  <span class="q-text-small" if.bind="!item.conf.updatedDate">${item.conf.createdDate & timeAgo:7*24*60*60}</span>
-  <span class="q-text-small">${item.conf.createdBy} ${user.roles.contains('poweruser')}</span>
+  <span class="q-text-small ${item.conf.active ? '' : 'q-text--light'}" if.bind="item.conf.updatedDate">${item.conf.updatedDate & timeAgo:7*24*60*60}</span>
+  <span class="q-text-small ${item.conf.active ? '' : 'q-text--light'}" if.bind="!item.conf.updatedDate">${item.conf.createdDate & timeAgo:7*24*60*60}</span>
+  <span class="q-text-small ${item.conf.active ? '' : 'q-text--light'}">${item.conf.createdBy} ${user.roles.contains('poweruser')}</span>
 
   <delete-button
     if.bind="user.roles.includes('poweruser')"
