--- a/client/src/elements/molecules/item-list-entry.html
+++ b/client/src/elements/molecules/item-list-entry.html
@@ -1,7 +1,7 @@
 <template containerless class="${item.conf.active ? 'active' : 'inactive'}" click.delegate="redirectToItemView()" draggable="true">
   <require from="./item-list-entry.css"></require>
   <require from="../molecules/delete-button.html"></require>
-  <box-icon if.bind="iconSvg" code.bind="iconSvg" class="tool-icon"></box-icon>
+  <box-icon if.bind="iconSvg" code.bind="iconSvg" size="medium" class="tool-icon"></box-icon>
   
   <span class="q-text-small">${item.conf.title}</span>
   <span class="q-text-small ${item.conf.active ? '' : 'q-text--light'}" if.bind="item.conf.updatedDate">${item.conf.updatedDate & timeAgo:7*24*60*60}</span>
