small style improvements

--- a/client/src/dialogs/confirm-dialog.html
+++ b/client/src/dialogs/confirm-dialog.html
@@ -4,9 +4,9 @@
     <div class="q-dialog__content">
       <h1 class="q-dialog-title">${config.confirmQuestion}</h1>
     </div>
-    <aside class="q-dialog__controls">
+    <div class="q-dialog__controls">
       <button-yes click.delegate="controller.ok()">${'general.yes' & t}</button-yes>
       <button-no click.delegate="controller.cancel()">${'general.no' & t}</button-yes>
-    </aside>
+    </div>
   </div>
 </template>
