--- a/client/src/elements/schema-editor/schema-editor-wrapper.html
+++ b/client/src/elements/schema-editor/schema-editor-wrapper.html
@@ -2,16 +2,25 @@
 
   <div if.bind="getType(schema) === 'string'" class="schema-editor-block">
     <require from="./schema-editor-string.html"></require>
-    <schema-editor-string 
+    <schema-editor-string
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
       required.bind="required"></schema-editor-string>
   </div>
 
+  <div if.bind="getType(schema) === 'textarea'" class="schema-editor-block">
+    <require from="./schema-editor-textarea.html"></require>
+    <schema-editor-textarea
+      schema.bind="schema"
+      data.two-way="data"
+      change.bind="change"
+      required.bind="required"></schema-editor-textarea>
+  </div>
+
   <div if.bind="getType(schema) === 'boolean'" class="schema-editor-block">
     <require from="./schema-editor-boolean.html"></require>
-    <schema-editor-boolean 
+    <schema-editor-boolean
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"></schema-editor-boolean>
@@ -19,7 +28,7 @@
 
   <div if.bind="getType(schema) === 'url'" class="schema-editor-block">
     <require from="./schema-editor-url.html"></require>
-    <schema-editor-url 
+    <schema-editor-url
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
@@ -28,7 +37,7 @@
 
   <div if.bind="getType(schema) === 'link'" class="schema-editor-block">
     <require from="./schema-editor-link"></require>
-    <schema-editor-link 
+    <schema-editor-link
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
@@ -37,7 +46,7 @@
 
   <div if.bind="getType(schema) === 'number'" class="schema-editor-block">
     <require from="./schema-editor-number"></require>
-    <schema-editor-number 
+    <schema-editor-number
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
@@ -46,7 +55,7 @@
 
   <div if.bind="getType(schema) === 'object'" class="schema-editor-block">
     <require from="./schema-editor-object"></require>
-    <schema-editor-object 
+    <schema-editor-object
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"></schema-editor-object>
@@ -54,7 +63,7 @@
 
   <div if.bind="getType(schema) === 'array'" class="schema-editor-block">
     <require from="./schema-editor-array"></require>
-    <schema-editor-array 
+    <schema-editor-array
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"></schema-editor-array>
@@ -62,7 +71,7 @@
 
   <div if.bind="getType(schema) === 'select'" class="schema-editor-block">
     <require from="./schema-editor-select"></require>
-    <schema-editor-select 
+    <schema-editor-select
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"></schema-editor-select>
@@ -70,7 +79,7 @@
 
   <div if.bind="getType(schema) === 'latLng'" class="schema-editor-block">
     <require from="./schema-editor-lat-lng"></require>
-    <schema-editor-lat-lng 
+    <schema-editor-lat-lng
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"></schema-editor-lat-lng>
@@ -78,11 +87,29 @@
 
   <div if.bind="getType(schema) === 'base64image'" class="schema-editor-block">
     <require from="./schema-editor-base64image"></require>
-    <schema-editor-base64image 
+    <schema-editor-base64image
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
       required.bind="required"></schema-editor-base64image>
+  </div>
+
+  <div if.bind="getType(schema) === 'geojsonPoint'" class="schema-editor-block">
+    <require from="./schema-editor-geojson-point"></require>
+    <schema-editor-geojson-point
+      schema.bind="schema"
+      data.two-way="data"
+      change.bind="change"
+      required.bind="required"></schema-editor-geojson-point>
+  </div>
+
+  <div if.bind="getType(schema) === 'json'" class="schema-editor-block">
+    <require from="./schema-editor-json"></require>
+    <schema-editor-json
+      schema.bind="schema"
+      data.two-way="data"
+      change.bind="change"
+      required.bind="required"></schema-editor-json>
   </div>
 
 </template>
