--- a/client/src/elements/schema-editor/schema-editor-lat-lng.html
+++ b/client/src/elements/schema-editor/schema-editor-lat-lng.html
@@ -4,11 +4,11 @@
   <div>
     <label>
       Latitude
-      <input type="number" step="any" value.bind="data.lat">
+      <input type="number" step="any" value.bind="data.lat" required.bind="required">
     </label>
     <label>
       Longitute
-      <input type="number" step="any" value.bind="data.lng">
+      <input type="number" step="any" value.bind="data.lng" required.bind="required">
     </label>
   </div>
 </template>
