allows options for schema-editor elements to be computed from the schema. used for force number in number select

--- a/client/src/elements/schema-editor/schema-editor-select.html
+++ b/client/src/elements/schema-editor/schema-editor-select.html
@@ -1,7 +1,10 @@
 <template>
   <label>
     ${schema["title"]}
-    <select value.bind="data" change.delegate="change()">
+    <select if.bind="!options.forceNumber" value.bind="data" change.delegate="change()">
+      <option repeat.for="option of schema.enum" value.bind="option">${optionLabels[$index]}</option>
+    </select>
+    <select if.bind="options.forceNumber" value.bind="data | forceNumber" change.delegate="change()">
       <option repeat.for="option of schema.enum" value.bind="option">${optionLabels[$index]}</option>
     </select>
   </label>
