--- a/client/src/elements/schema-editor/schema-editor-geojson-point.html
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.html
@@ -1,6 +1,7 @@
 <template>
   <require from="./schema-editor-object"></require>
   <require from="./schema-editor-geojson-point.css"></require>
+  <p class="q-text q-text--error" if.bind="showLoadingError" t="editor.failedToLoadEditorPart"></p>
   <div style="height: 400px;" ref="mapContainer"></div>
   <div>
     <schema-editor-object
