--- a/client/src/pages/index.html
+++ b/client/src/pages/index.html
@@ -19,7 +19,8 @@
     
     <div class="items-filter q-form">
       <select value.bind="filter.selected" change.delegate="filterChanged()" repeat.for="filter of availableFilters" class="${filter.selected === filter.options[0].name ? 'q-text--ultralight' : ''}">
-        <option repeat.for="option of filter.options" value.bind="option.name">${option.label & t}</option>
+        <option repeat.for="option of filter.options" if.bind="option.label_i18n_key" value.bind="option.name">${option.label_i18n_key & t}</option>
+        <option repeat.for="option of filter.options" if.bind="!option.label && !option.label_i18n_key" value.bind="option.name">${'general.only' & t} ${'tools:' + option.name & t}</option>
       </select>
     </div>
 
