use model.bind on schema-editor-select instead of forceNumber and ValueConverter with options

--- a/client/src/elements/schema-editor/schema-editor-wrapper.html
+++ b/client/src/elements/schema-editor/schema-editor-wrapper.html
@@ -6,8 +6,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-string>
+      required.bind="required"></schema-editor-string>
   </div>
 
   <div if.bind="getType(schema) === 'textarea'" class="schema-editor-block">
@@ -16,8 +15,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-textarea>
+      required.bind="required"></schema-editor-textarea>
   </div>
 
   <div if.bind="getType(schema) === 'boolean'" class="schema-editor-block">
@@ -25,8 +23,7 @@
     <schema-editor-boolean
       schema.bind="schema"
       data.two-way="data"
-      change.bind="change"
-      options.bind="getOptions(schema)"></schema-editor-boolean>
+      change.bind="change"></schema-editor-boolean>
   </div>
 
   <div if.bind="getType(schema) === 'url'" class="schema-editor-block">
@@ -35,8 +32,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-url>
+      required.bind="required"></schema-editor-url>
   </div>
 
   <div if.bind="getType(schema) === 'link'" class="schema-editor-block">
@@ -45,8 +41,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-link>
+      required.bind="required"></schema-editor-link>
   </div>
 
   <div if.bind="getType(schema) === 'number'" class="schema-editor-block">
@@ -55,8 +50,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-number>
+      required.bind="required"></schema-editor-number>
   </div>
 
   <div if.bind="getType(schema) === 'object'" class="schema-editor-block">
@@ -64,8 +58,7 @@
     <schema-editor-object
       schema.bind="schema"
       data.two-way="data"
-      change.bind="change"
-      options.bind="getOptions(schema)"></schema-editor-object>
+      change.bind="change"></schema-editor-object>
   </div>
 
   <div if.bind="getType(schema) === 'array'" class="schema-editor-block">
@@ -73,8 +66,7 @@
     <schema-editor-array
       schema.bind="schema"
       data.two-way="data"
-      change.bind="change"
-      options.bind="getOptions(schema)"></schema-editor-array>
+      change.bind="change"></schema-editor-array>
   </div>
 
   <div if.bind="getType(schema) === 'select'" class="schema-editor-block">
@@ -82,8 +74,7 @@
     <schema-editor-select
       schema.bind="schema"
       data.two-way="data"
-      change.bind="change"
-      options.bind="getOptions(schema)"></schema-editor-select>
+      change.bind="change"></schema-editor-select>
   </div>
 
   <div if.bind="getType(schema) === 'latLng'" class="schema-editor-block">
@@ -92,8 +83,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-lat-lng>
+      required.bind="required"></schema-editor-lat-lng>
   </div>
 
   <div if.bind="getType(schema) === 'base64image'" class="schema-editor-block">
@@ -102,8 +92,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-base64image>
+      required.bind="required"></schema-editor-base64image>
   </div>
 
   <div if.bind="getType(schema) === 'geojsonPoint'" class="schema-editor-block">
@@ -112,8 +101,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-geojson-point>
+      required.bind="required"></schema-editor-geojson-point>
   </div>
 
   <div if.bind="getType(schema) === 'json'" class="schema-editor-block">
@@ -122,8 +110,7 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      required.bind="required"
-      options.bind="getOptions(schema)"></schema-editor-json>
+      required.bind="required"></schema-editor-json>
   </div>
 
 </template>
