--- a/client/src/elements/schema-editor/schema-editor-select.html
+++ b/client/src/elements/schema-editor/schema-editor-select.html
@@ -1,11 +1,8 @@
 <template>
   <label>
     ${schema["title"]}
-    <select if.bind="!options.forceNumber" value.bind="data" change.delegate="change()">
-      <option repeat.for="option of schema.enum" value.bind="option">${optionLabels[$index]}</option>
-    </select>
-    <select if.bind="options.forceNumber" value.bind="data | forceNumber" change.delegate="change()">
-      <option repeat.for="option of schema.enum" value.bind="option">${optionLabels[$index]}</option>
+    <select value.bind="data" change.delegate="change()">
+      <option repeat.for="option of schema.enum" model.bind="option">${optionLabels[$index]}</option>
     </select>
   </label>
 </template>
