--- a/client/src/elements/organisms/items-list.html
+++ b/client/src/elements/organisms/items-list.html
@@ -1,4 +1,4 @@
-<template>
+<template bindable="items">
   <require from="../molecules/item-list-entry.js"></require>
   
   <item-list-entry repeat.for="item of items" item.bind="item"></item-list-entry>
