--- a/client/src/pages/index.html
+++ b/client/src/pages/index.html
@@ -16,15 +16,10 @@
         <path d="M22.5 21.23a9.73 9.73 0 1 1 0-19.46c5.374 0 9.73 4.356 9.73 9.73 0 5.374-4.356 9.73-9.73 9.73zM13.782 19A11.455 11.455 0 0 1 11 11.5C11 5.149 16.149 0 22.5 0S34 5.149 34 11.5 28.851 23 22.5 23a11.455 11.455 0 0 1-7.5-2.782v2.496l-9.71 8.014c-.853.705-2.175.643-2.958-.132l-.914-.906c-.782-.774-.728-1.974.123-2.676L11.25 19h2.532z" fill-rule="evenodd"/>
       </svg>
     </div>
-    
-    <div class="items-filter q-form">
-      <select value.bind="filter.selected" change.delegate="filterChanged()" repeat.for="filter of availableFilters" class="${filter.selected === filter.options[0].name ? 'q-text--ultralight' : ''}">
-        <option repeat.for="option of filter.options" if.bind="option.label_i18n_key" value.bind="option.name">${option.label_i18n_key & t}</option>
-        <option repeat.for="option of filter.options" if.bind="!option.label && !option.label_i18n_key" value.bind="option.name">${'general.only' & t} ${'tools:' + option.name & t}</option>
-      </select>
-    </div>
 
-    <item-list items.bind="items"></item-list>
+    <items-filter filters.bind="availableFilters" change.call="filterChanged()"></items-filter>
+
+    <items-list items.bind="items"></items-list>
     <q-loader if.bind="itemsLoading"></q-loader>
     <button-secondary if.bind="moreItemsAvailable" class="index__load-more-button" click.delegate="loadMore()"><span t="general.loadMore"></span></button-secondary>
 
