--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -15,7 +15,7 @@
           </form>
         </section>
         <section>
-          <h2>Vorschau</h2>
+          <h2 t="general.preview"></h2>
           <item-preview data.bind="previewData"></item-preview>
         </section>
         <section>
