--- a/client/src/cms-component-app/app.html
+++ b/client/src/cms-component-app/app.html
@@ -8,53 +8,66 @@
   <require from="../elements/atoms/box-icon.html"></require>
   <require from="../elements/item-preview/preview-container"></require>
 
-  <div class="cms-component-search" if.bind="showSearch">
+  <div class="cms-component-search">
     <div class="search">
-      <input t="[placeholder]general.searchLabel" input.delegate="reloadItems() & debounce" value.two-way="currentSearchString">
+      <input t="[placeholder]cmsComponent.searchLabel" input.delegate="reloadItems() & debounce" value.two-way="currentSearchString">
       <svg viewBox="0 0 34 32" xmlns="http://www.w3.org/2000/svg">
         <path d="M22.5 21.23a9.73 9.73 0 1 1 0-19.46c5.374 0 9.73 4.356 9.73 9.73 0 5.374-4.356 9.73-9.73 9.73zM13.782 19A11.455 11.455 0 0 1 11 11.5C11 5.149 16.149 0 22.5 0S34 5.149 34 11.5 28.851 23 22.5 23a11.455 11.455 0 0 1-7.5-2.782v2.496l-9.71 8.014c-.853.705-2.175.643-2.958-.132l-.914-.906c-.782-.774-.728-1.974.123-2.676L11.25 19h2.532z" fill-rule="evenodd"/>
       </svg>
     </div>
     <div class="item-list">
-      <div class="item-list-entry ${item.conf.active ? 'active' : 'inactive'}" repeat.for="item of items">
-        <box-icon if.bind="item.conf.icon" code.bind="item.conf.icon" size="medium" class="tool-icon" click.delegate="selectForLd(item)"></box-icon>
-
-        <span class="q-text-small item-title" click.delegate="selectForLd(item)">
-          ${item.conf.title}
-        </span>
-        <span class="q-text-small ${item.conf.active ? '' : 'q-text--light'}" if.bind="item.conf.updatedDate" click.delegate="selectForLd(item)">
-          ${item.conf.updatedDate & timeAgo:7*24*60*60}
-        </span>
-        <span class="q-text-small ${item.conf.active ? '' : 'q-text--light'}" if.bind="!item.conf.updatedDate" click.delegate="selectForLd(item)">
-          ${item.conf.createdDate & timeAgo:7*24*60*60}
-        </span>
-        <span class="q-text-small ${item.conf.active ? '' : 'q-text--light'}" click.delegate="selectForLd(item)">
-          ${item.conf.createdBy}
-        </span>
-        <button-secondary size="small" click.delegate="redirectToItemPreview(item)" icon="edit" />
+      <div class="item-list-entry ${item.conf.active ? 'active' : 'inactive'} ${item.conf._id === id ? 'selected' : ''}" click.delegate="selectItem(item.conf._id)" repeat.for="item of items">
+        <div class="item-list-entry-title">
+          <box-icon if.bind="item.conf.icon" code.bind="item.conf.icon" size="medium" class="tool-icon"></box-icon>
+          <span class="q-text item-title">${item.conf.title}</span>
+        </div>
+        <div class="item-list-entry-info">
+          <span class="q-text item-date ${item.conf.active ? '' : 'q-text--light'}" if.bind="item.conf.updatedDate">
+            ${item.conf.updatedDate & timeAgo:7*24*60*60}
+          </span>
+          <span class="q-text item-date ${item.conf.active ? '' : 'q-text--light'}" if.bind="!item.conf.updatedDate">
+            ${item.conf.createdDate & timeAgo:7*24*60*60}
+          </span>
+          <span class="q-text ${item.conf.active ? '' : 'q-text--light'}">
+            ${item.conf.createdBy}
+          </span>
+        </div>
+      </div>
+      <q-loader if.bind="itemsLoading"></q-loader>
+      <button-secondary if.bind="moreItemsAvailable" class="cms-component-search__load-more-button" click.delegate="loadMore()">
+        <span t="general.loadMore"></span>
+      </button-secondary>
+    </div>
+  </div>
+  <div class="cms-component-item-container">
+    <div class="cms-component-item__content">
+      <span class="q-text-small q-text--light" t="cmsComponent.titleLabel" if.bind="selectedItem"></span>
+      <span class="q-text-small q-text--light" if.bind="selectedItem">${selectedItem.conf.title}</span>
+      <preview-container ref="previewContainer" id="preview-container" width.bind="previewWidth" rendering-info.bind="renderingInfo">
+      </preview-container>
+      <div class="no-item-selected" if.bind="!id" t="cmsComponent.selectGraphic"></div>
+      <div if.bind="id">
+        <form class="q-form">
+          <div class="q-form__checkbox" repeat.for="optionKey of optionKeys">
+            <label>
+              <input type="checkbox" checked.bind="displayOptions[optionKey]" change.delegate="change()">
+              <span>${displayOptionsSchema.properties[optionKey].title}</span>
+            </label>
+          </div>
+        </form>
       </div>
     </div>
-    <q-loader if.bind="itemsLoading"></q-loader>
-    <button-secondary if.bind="moreItemsAvailable" class="cms-component-search__load-more-button" click.delegate="loadMore()">
-      <span t="general.loadMore">mehr laden</span>
-    </button-secondary>
-  </div>
-  <div class="cms-component-item-container" if.bind="!showSearch">
-    <div class="cms-component-item__content">
-      <preview-container ref="previewContainer" id="preview-container" width.bind="previewWidthProxy.width" rendering-info.bind="renderingInfo"></preview-container>
-    </div>
     <div class="cms-component-item__controls">
-      <a href="#/editor/${tool}/${id}" target="_blank">
-        <button-secondary icon="edit">
-          <span>In Q bearbeiten</span>
-        </button-secondary>
-      </a>
-      <button-secondary click.delegate="unselectItem()" icon="no">
-        <span>Andere Grafik auswählen</span>
-      </button-secondary>
-      <button-secondary click.delegate="sendItemToLd()" icon="yes">
-        <span>Für Livingdocs übernehmen</span>
-      </button-secondary>
+      <div class="item-edit">
+        <a href="#/editor/${tool}/${id}" target="_blank">
+          <button-secondary size="big" icon="edit"></button-secondary>
+        </a>
+        <span class="q-text-small q-text--light" t="cmsComponent.edit"></span>
+      </div>
+      <div class="item-insert">
+        <button-primary click.delegate="insertItem()" size="big" icon="deactivate"></button-primary>
+        <span class="q-text-small q-text--light" t="cmsComponent.insert"></span>
+      </div>
     </div>
   </div>
 </template>
