--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -4,9 +4,12 @@
     .container {
       overflow-x: auto;
       height: var(--preview-container-height, auto);
+      max-height: var(--preview-container-max-height, auto);
       overflow-y: var(--preview-container-overflow-y, auto);
-      position: var(--preview-container-position, static);
-      top: var(--preview-container-top, 0);
+    }
+    /* very special case => really catch or just display like it's delivered? */
+    .container .q-item-container.s-q-item {
+      margin-top: var(--preview-container-margin-top, 32px)
     }
   </style>
   <div class="container" css="width: ${width}px; max-width: 100%;">
